--- a/技术段子——论如何在0.387秒以内获取到闲鱼上新的数据.md
+++ b/技术段子——论如何在0.387秒以内获取到闲鱼上新的数据.md
@@ -16,7 +16,7 @@ hook对于app来说，就相当于一个基于代码层，或者Runtime层的一
 
 理论上这样的架构会在获取签名和请求数据的效率上提高不少，尤其是针对风控，针对分部式系统的搭建方面都很容易实现，最终达到提高数据同步的效率。
 
-[](demo/demo.png)
+![](demo/demo.png, "demo")
 
 ### 2、效率疑云
 软件目前已经经过本人自己测试，本人已经在使用了。
