--- a/技术段子——论如何在0.387秒以内获取到闲鱼上新的数据.md
+++ b/技术段子——论如何在0.387秒以内获取到闲鱼上新的数据.md
@@ -25,13 +25,13 @@ hook对于app来说，就相当于一个基于代码层，或者Runtime层的一
 
 我目前对自己的架构是十分自信的，那么问题在哪？
 
+![demo](demo/demo1.png)
 
-
-
+![demo](demo/demo2.png)
 
 闲鱼商品的发布时间，是在闲鱼数据里面自带字段，并不是随意定义的，比如下面这段数据段：
 
-
+![json](demo/json.png)
 
 将获取到数据的时间生成一个时间戳，再对比商品的发布时间，即可以获取商品从发布，到被获取到的时间差，这个就可以理解成获取闲鱼商品的延迟。那么，在第二张截图的抓取时间和发布时间对比，发现大部分的睡迟都在4秒和以上，第三张截图（下午测试截图）的延迟也普遍在2秒和2秒以上，可能是因为晚上，发布数据少，而用户请求多，下午时间测试的延迟效果要好于晚上测试。
 
@@ -40,15 +40,15 @@ hook对于app来说，就相当于一个基于代码层，或者Runtime层的一
 ## 3、编程语言效率、数据解析延迟？
 使用同样的请求后端架构，我分别使用python, Java, Go都写了请求代码，获取到闲鱼数据后，解析获取数据里面延迟最低的那条数据呈现出来，发现...
 
-
+![python测试结果](demo/python.png)
 
 python测试结果
 
-
+![Java测试结果](demo/java.png)
 
 Java测试结果
 
-
+![Go测试结果](demo/go.png)
 
 Go测试结果
 
@@ -59,7 +59,7 @@ Go测试结果
 ## 4、一条相同数据，两次获取延迟差为0.387秒！
 上面的问题无从着手，但随着继续测试，我发现一个问题。当新数据量不足的时候，两次请求可能获取同一条数据。而同一条数据得到的延迟数据，竟然只有很小的差距。
 
-
+![delay](demo/delay_delay.png)
 
 我们先看一下面的逻辑：
 
@@ -118,7 +118,7 @@ io延迟的话，这里也可以忽略不计，因为没多少，也不存在竞
 ## 5、网络延迟3秒以上？
 我再在在闲鱼请求和获取到数据打上时间节点，获取到这一块的延迟是多少：
 
-
+![delay](demo/net_delay.png)
 
 可以看到，我的网络情况还是很好的，基本网络延迟在0.6-0.7秒之间。
 
